# vokab

./: CMakeLists.txt  README.md
src/: AddDialog.h  AuthDialog.h  FileManager.cpp  FileManager.h  FlashcardWidget.cpp  FlashcardWidget.h  HomeWidget.cpp  HomeWidget.h  MainWindow.cpp  MainWindow.h  User.cpp  User.h  VocabFileHandler.cpp  VocabFileHandler.h  fileManager.cpp  main.cpp  mainWindow.cpp  mainWindow.h  stylesheet.h  user.cpp  user.h  vokab.cpp  vokab.h
